# web-chess

./: Cargo.toml  LICENSE  Procfile  README.md  package.json  vetur.config.js
.cargo-husky/hooks/: pre-commit
front/: .eslintrc.js  README.md  package-lock.json  package.json  vue.config.js
front/public/: index.html
front/src/: App.vue  font-awesome.ts  main.ts
front/src/api/: index.ts
front/src/common/: Action.ts  ActionFactory.ts  CastlingAction.ts  Cell.ts  EnPassantAction.ts  Game.ts  Piece.ts  Promotion.ts  PromotionAction.ts  StandardAction.ts  b64.ts
front/src/components/: Board.vue  Button.vue  Copy.vue  GameNotifications.vue  History.vue  Navbar.vue  PromotionPrompt.vue  Share.vue  Switch.vue  TitleSeparator.vue
front/src/router/: index.ts
front/src/scss/: _theme.scss
front/src/store/: action-types.ts  actions.ts  getters.ts  index.ts  mutation-types.ts  mutations.ts  state.ts
front/src/typings/: store-state.d.ts  vue.d.ts
front/src/views/: About.vue  Game.vue  Home.vue
src/: api.rs  board.rs  data.rs  lib.rs  main.rs
src/board/: cell.rs  constants.rs  data.rs  error.rs  game.rs  mod.rs  piece.rs
src/board/action/: castling.rs  en_passant.rs  mod.rs  promotion.rs  standard.rs
tests/: integration_test.rs
