[package]
name = "web-chess"
version = "0.1.0"
authors = ["Louis MOUHAT <louis.mouhat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
rand = "0.8.0"
chashmap = "*"
futures = "0.3.15"
serde = "1.0.126"
packed_struct = { version = "0.5.0", features = ["std", "use_serde"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]